[gd_scene load_steps=7 format=2]

[ext_resource path="res://interface/menus/game_over_screen/loss_graphic.png" type="Texture" id=1]
[ext_resource path="res://effects/TransitionRect.tscn" type="PackedScene" id=2]
[ext_resource path="res://interface/menus/game_over_screen/game_over_screen.gd" type="Script" id=3]
[ext_resource path="res://interface/ext_button.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/VBoxContainer/Label:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CenterContainer/VBoxContainer/GridContainer/LevelLabel:visible_characters")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CenterContainer/VBoxContainer/GridContainer/LevelResult:visible_characters")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CenterContainer/VBoxContainer/GridContainer/TimeLabel:visible_characters")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -1 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CenterContainer/VBoxContainer/GridContainer/TimeResult:visible_characters")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -1 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CenterContainer/VBoxContainer/RestartButton:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 46 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CenterContainer/VBoxContainer/QuitButton:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 63 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "show"
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -40 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.258824, 0.258824, 0.258824, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer/VBoxContainer/Label:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CenterContainer/VBoxContainer/GridContainer/LevelLabel:visible_characters")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 5.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, -1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CenterContainer/VBoxContainer/GridContainer/LevelResult:visible_characters")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 5.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, -1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CenterContainer/VBoxContainer/GridContainer/TimeLabel:visible_characters")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 5.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, -1 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CenterContainer/VBoxContainer/GridContainer/TimeResult:visible_characters")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 5.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, -1 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CenterContainer/VBoxContainer/RestartButton:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 7, 7.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 140 ), Vector2( 0, 140 ), Vector2( 0, 46 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CenterContainer/VBoxContainer/QuitButton:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 7.1, 7.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 160 ), Vector2( 0, 160 ), Vector2( 0, 63 ) ]
}

[node name="GameOverScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 160.0
margin_bottom = 160.0
texture = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 45.0
margin_top = 22.0
margin_right = 115.0
margin_bottom = 98.0
rect_min_size = Vector2( 70, 0 )

[node name="Label" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
margin_right = 70.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_colors/default_color = Color( 0.886275, 0.447059, 0.521569, 1 )
bbcode_enabled = true
bbcode_text = "[center][shake rate=10 level=6]GAME OVER"
text = "GAME OVER"
fit_content_height = true
scroll_active = false

[node name="GridContainer" type="GridContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 70.0
margin_bottom = 42.0
custom_constants/vseparation = -2
columns = 2

[node name="LevelLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_right = 21.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.34902, 0.341176, 0.341176, 1 )
text = "Level:"
percent_visible = -0.166667

[node name="LevelResult" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 25.0
margin_right = 70.0
margin_bottom = 13.0
size_flags_horizontal = 3
text = "Level 4"
align = 2
percent_visible = -0.166667

[node name="TimeLabel" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_top = 11.0
margin_right = 21.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.34902, 0.341176, 0.341176, 1 )
text = "Time:"
percent_visible = -0.2

[node name="TimeResult" type="Label" parent="CenterContainer/VBoxContainer/GridContainer"]
margin_left = 25.0
margin_top = 11.0
margin_right = 70.0
margin_bottom = 24.0
text = "00:00.00"
align = 2
percent_visible = -0.125

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 70.0
margin_bottom = 59.0
text = "Restart"
script = ExtResource( 4 )

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 70.0
margin_bottom = 76.0
custom_colors/font_color_hover = Color( 0.972549, 0.772549, 0.227451, 1 )
text = "Quit"
script = ExtResource( 4 )

[node name="TransitionRect" parent="." instance=ExtResource( 2 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/show = SubResource( 2 )
